# equivalentcircuitmodeler

./: CMakeLists.txt  README.md
.github/: CONTRIBUTING.md  README.md
data/: bode.csv  bodePhase.csv  nyquist.csv
lib/: CMakeLists.txt
lib/circuit/: CMakeLists.txt  circuit.cpp  circuit.h
scripts/: plotData.m
src/: interface.cpp
